Bug 464201 - After screen resolution or number of screens changes Panel popups appear in the horizontal center of the screen with their panel
Summary: After screen resolution or number of screens changes Panel popups appear in t...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.101.0
Platform: openSUSE Linux
: HI minor
Target Milestone: ---
Assignee: veggero
URL:
Keywords:
: 464428 464740 464872 464898 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-12 15:47 UTC by Fushan Wen
Modified: 2023-01-31 20:46 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.103
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-01-12 15:47:11 UTC
SUMMARY
If Kickoff is opened and screen resolution changes from 800x600 to 1920x1080, Kickoff will appear in the horizontal middle of the screen.


STEPS TO REPRODUCE
1. Change resolution to 800x600
2. Open Kickoff
3. Wait 15 seconds

OBSERVED RESULT
Kickoff appears in the horizontal middle of the screen

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Fushan Wen 2023-01-12 15:52:26 UTC
fusionfuture (Telegram Premium): the centering widget thing should probably consider screen resolution change signal as well
Comment 2 Nate Graham 2023-01-12 19:55:19 UTC
Whoops!
Comment 3 Nate Graham 2023-01-24 21:48:26 UTC
*** Bug 464740 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2023-01-26 16:44:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/689
Comment 5 Nate Graham 2023-01-27 17:47:15 UTC
*** Bug 464872 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2023-01-27 19:52:33 UTC
*** Bug 464898 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2023-01-31 19:17:03 UTC
*** Bug 464428 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2023-01-31 20:25:10 UTC
Git commit eda6caabcffff484544af8949d0ca0a3ea3ce333 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 31/01/2023 at 20:25.
Pushed by ngraham into branch 'master'.

Dialog: Fix calculation of distance between dialog and parent applet

`ParentRect` is not using the same coordinate system as `dialogPos` and `avail`,
which could result in incorrect placement of dialogs when you have e.g. multiple
monitors or a non-maximized panel. This replaces `ParentRect` with `dialogPos` so
the coordinate systems remain in sync.
Related: bug 464513
FIXED-IN: 5.103

M  +2    -2    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/eda6caabcffff484544af8949d0ca0a3ea3ce333
Comment 9 Nate Graham 2023-01-31 20:46:07 UTC
Git commit 1e0042c750756d0963d11d125978f47ea830d495 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 31/01/2023 at 20:45.
Pushed by ngraham into branch 'cherry-pick-eda6caab'.

Dialog: Fix calculation of distance between dialog and parent applet

`ParentRect` is not using the same coordinate system as `dialogPos` and `avail`,
which could result in incorrect placement of dialogs when you have e.g. multiple
monitors or a non-maximized panel. This replaces `ParentRect` with `dialogPos` so
the coordinate systems remain in sync.
Related: bug 464513
FIXED-IN: 5.103


(cherry picked from commit eda6caabcffff484544af8949d0ca0a3ea3ce333)

M  +2    -2    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/1e0042c750756d0963d11d125978f47ea830d495